--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 Flask==2.2.2
 flask-cors==3.0.10
 PyPDF2==3.0.0
-keybert==0.5.0
-gunicorn==20.1.0
-scikit-learn==1.2.2
-sentence-transformers==2.2.2
+requests==2.32.3
